testsuite/tests/typecheck/should_fail/T14048b.stderr

T14048b.hs:7:1: error:
    • Data family has non-TYPE
      and non-variable return kind ‘Constraint’
    • In the data family declaration for ‘Foo’
